now added function for reading .txt .pdf .jpeg files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,8 @@ WORKDIR /app
 # Abhängigkeiten kopieren und installieren
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install pymupdf pytesseract pillow
+
 
 # Restlichen Code kopieren
 COPY . .
